objects/vlocity_cmt__Datastore__c.object
<CustomObject>
    <description>Vlocity Data store to be used as persistent cache.</description>
    <fields>
        <fullName>vlocity_cmt__CachedDataSetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies a Cached Data Set entry.</description>
        <label>Cached Data Set</label>
        <referenceTo>vlocity_cmt__CachedDataSet__c</referenceTo>
        <relationshipLabel>Data Stores</relationshipLabel>
        <relationshipName>DataStores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Classname__c</fullName>
        <description>The fully qualified class name of the reader class to use to deserialize the value of this entry.</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDateTime__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Key__c</fullName>
        <description>The full key field (up to 255 characters) which fully identifies this entry in the data store.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies a product when this entry is related to a specific product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Data Store Item</relationshipLabel>
        <relationshipName>DataStoreItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>The long text value of the data store entry.</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Data Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mobile_Data_Stores</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>vlocity_cmt__Key__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_cmt__Datastore__c.Mobile_Configuration</value>
        </filters>
        <label>Mobile Data Stores</label>
    </listViews>
    <nameField>
        <label>VlocityDataStore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Stores</pluralLabel>
    <recordTypes>
        <fullName>Mobile_Configuration</fullName>
        <active>true</active>
        <label>Mobile Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__CPQAPI</fullName>
        <active>true</active>
        <description>CPQ API partition</description>
        <label>CPQAPI</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductHierarchy</fullName>
        <active>true</active>
        <description>Flatenned Product Hierarchy Items</description>
        <label>Product Hierarchy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>